tests/errors/semantics/condition_must_be_scalar/non-scalar_in_if.c
// Condition must be of scalar type
void main()
{
	if ("str");
}
